change env variable name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,15 @@ services:
   frontend:
     image: matandomuertos/server-homepage-frontend:latest
     container_name: homepage-frontend
-    # environment:
-    #   - TZ=Europe/Warsaw
+    environment:
+      - REACT_APP_API=http://backend:8000
     ports:
       - 8080:80
     restart: unless-stopped
 
   backend:
     image: matandomuertos/server-homepage-backend:latest
-    container_name: omepage-backend
+    container_name: homepage-backend
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
