configure nginx reverse proxy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     image: matandomuertos/server-homepage-frontend:latest
     container_name: homepage-frontend
     environment:
-      - REACT_APP_API=http://backend:8000
+      - REACT_APP_API=http://koko:80/api
     ports:
       - 80:80
     restart: unless-stopped
