--- a/nginx.conf
+++ b/nginx.conf
@@ -6,4 +6,11 @@ server {
     include /etc/nginx/mime.types;
     try_files $uri $uri/ /index.html;
   }
+  location /api {
+      resolver 127.0.0.11;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass http://backend:8000$request_uri;
+  }
 }
