--- a/.github/workflows/dockerBuild.yaml
+++ b/.github/workflows/dockerBuild.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Build and push frontend
       uses: docker/build-push-action@v3
       with:
-        context: frontend.Dockerfile
+        context: ./frontend.Dockerfile
         push: true
         tags: |
           matandomuertos/server-homepage-frontend:latest
@@ -41,7 +41,7 @@ jobs:
     - name: Build and push backend
       uses: docker/build-push-action@v3
       with:
-        context: frontend.Dockerfile
+        context: ./backend.Dockerfile
         push: true
         tags: |
           matandomuertos/server-homepage-backend:latest
