--- a/.github/workflows/dockerBuild.yaml
+++ b/.github/workflows/dockerBuild.yaml
@@ -37,7 +37,7 @@ jobs:
         push: true
         tags: |
           matandomuertos/server-homepage-frontend:latest
-          ghcr.io/${{ github.repository }}
+          ghcr.io/${{ github.repository }}/server-homepage-frontend:latest
 
     - name: Build and push backend
       uses: docker/build-push-action@v3
@@ -47,4 +47,4 @@ jobs:
         push: true
         tags: |
           matandomuertos/server-homepage-backend:latest
-          ghcr.io/${{ github.repository }}
+          ghcr.io/${{ github.repository }}/server-homepage-backend:latest
